Source/WebCore/rendering/svg/RenderSVGModelObject.h
@@ -72,6 +72,7 @@ protected:
 private:
     // This method should never be called, SVG uses a different nodeAtPoint method
     bool nodeAtPoint(const HitTestRequest&, HitTestResult&, const HitTestLocation& locationInContainer, const LayoutPoint& accumulatedOffset, HitTestAction) OVERRIDE;
+    virtual void absoluteFocusRingQuads(Vector<FloatQuad>&);
 };
 
 }
